change package structure

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.shvartsy.simpleviewmodel.simpleviewmodel">
+    package="com.shvartsy.archcomponents">
 
     <application
         android:allowBackup="true"
@@ -9,16 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--
-        <activity android:name=".ViewModelDemoActivity">
+        <activity android:name=".view.ViewModelDemoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        -->
-        <activity android:name=".LiveDataDemoActivity">
+        <!--
+        <activity android:name=".view.LiveDataDemoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
